--- a/src/shared/styles/shared/_colors.scss
+++ b/src/shared/styles/shared/_colors.scss
@@ -109,11 +109,11 @@ $translucent: (
 );
 
 $black: (
-	'base': #000000,
+	base: #000000,
 );
 
 $white: (
-	'base': #ffffff,
+	base: #ffffff,
 );
 
 $body-background-color: #f4f6f8;
