--- a/src/features/issuePreview/IssuePreview.scss
+++ b/src/features/issuePreview/IssuePreview.scss
@@ -1,1 +1,13 @@
 @import '../../shared/styles/utilities';
+
+.IssuePreview {
+	width: 100%;
+	height: 100%;
+	padding: spacing(extraTight) spacing(extraTight);
+	border-radius: border-radius();
+	cursor: pointer;
+
+	&:hover {
+		background-color: color($grey, lighter);
+	}
+}
