--- a/src/features/statusDropdown/StatusDropdown.scss
+++ b/src/features/statusDropdown/StatusDropdown.scss
@@ -1,9 +1,11 @@
 @import '../../shared/styles/utilities';
 
+$statusDropdown-width: rem(150px);
+
 .StatusDropdown {
 	position: relative;
 	display: flex;
-	width: rem(150px);
+	width: $statusDropdown-width;
 	z-index: 12;
 	flex-direction: column;
 }
@@ -15,7 +17,7 @@
 	color: color($white);
 	background-color: color($grey);
 	font-weight: bold;
-	width: rem(150px);
+	width: $statusDropdown-width;
 	cursor: pointer;
 	transition: 0.2s;
 	z-index: 11;
@@ -42,40 +44,4 @@
 .StatusDropdown--Options {
 	animation: moveit 550ms ease forwards;
 	will-change: transform;
-}
-
-@keyframes moveit {
-	0% {
-		transform: translateY(-40px) scale3d(0.98, 0.98, 1);
-	}
-	20% {
-		transform: translateY(5px) scale3d(1.05, 1.05, 1);
-	}
-	40% {
-		transform: translateY(-5px) scale3d(0.99, 0.99, 1);
-	}
-	66% {
-		transform: translateY(2px) scale3d(1, 1, 1);
-	}
-	100% {
-		transform: translateY(0px) scale3d(1, 1, 1);
-	}
-}
-
-@keyframes moveitback {
-	0% {
-		transform: translateY(0px);
-	}
-	100% {
-		transform: translateY(-60px) scale3d(0.99, 0.99, 1);
-	}
-}
-
-@keyframes scale {
-	0% {
-		transform: scale3d(0.98, 0.98, 1);
-	}
-	100% {
-		transform: scale3d(1, 1, 1);
-	}
 }
