--- a/src/shared/styles/_utilities.scss
+++ b/src/shared/styles/_utilities.scss
@@ -1,2 +1,2 @@
 // Shared
-@import 'shared/helpers', 'shared/colors', 'shared/shadows', 'shared/responsive', 'shared/keyframes';
+@import 'shared/helpers', 'shared/colors', 'shared/shadows', 'shared/responsive', 'shared/keyframes', 'shared/z-index';
