--- a/src/features/statusDropdown/StatusDropdown.scss
+++ b/src/features/statusDropdown/StatusDropdown.scss
@@ -6,7 +6,6 @@ $statusDropdown-width: rem(150px);
 	position: relative;
 	display: flex;
 	width: $statusDropdown-width;
-	z-index: 12;
 	flex-direction: column;
 }
 
@@ -20,7 +19,7 @@ $statusDropdown-width: rem(150px);
 	width: $statusDropdown-width;
 	cursor: pointer;
 	transition: 0.2s;
-	z-index: 11;
+	text-shadow: 0 0 2px transparentize(color($black), 0.8);
 
 	&:hover {
 		box-shadow: shadow();
@@ -31,14 +30,19 @@ $statusDropdown-width: rem(150px);
 	transition: all 300ms ease;
 	animation: moveitback 400ms ease forwards;
 	will-change: transform;
-	z-index: 10;
-	padding-top: rem(37px);
+	z-index: $zIndex-dropdown;
+	margin-top: rem(28px);
 	position: absolute;
 	top: 0;
+	background-color: transparentize(color($white), 0.15);
+	border-radius: border-radius();
+	padding: rem(8px) rem(12px);
+	box-shadow: shadow(faint);
+	margin-left: rem(-12px);
 }
 
 .StatusDropdown--Options-Item:hover {
-	transform: translateX(2px);
+	transform: translateY(-2px);
 }
 
 .StatusDropdown--Options {
