--- a/src/features/typeDropdown/TypeDropdown.scss
+++ b/src/features/typeDropdown/TypeDropdown.scss
@@ -3,7 +3,6 @@
 .TypeDropdown {
 	position: relative;
 	display: flex;
-	z-index: 12;
 	flex-direction: column;
 }
 
@@ -13,7 +12,6 @@
 	font-weight: bold;
 	cursor: pointer;
 	transition: 0.2s;
-	z-index: 11;
 
 	&:hover {
 		background-color: color($translucent);
@@ -24,14 +22,19 @@
 	transition: all 300ms ease;
 	animation: moveitback 400ms ease forwards;
 	will-change: transform;
-	z-index: 10;
-	padding-top: rem(37px);
+	z-index: $zIndex-dropdown;
+	margin-top: rem(28px);
 	position: absolute;
 	top: 0;
+	background-color: transparentize(color($white), 0.1);
+	border-radius: border-radius();
+	padding: rem(6px) rem(4px);
+	box-shadow: shadow(faint);
+	margin-left: rem(-4px);
 }
 
 .TypeDropdown--Options-Item:hover {
-	transform: translateX(2px);
+	transform: translateY(-2px);
 }
 
 .TypeDropdown--Options {
