--- a/src/elements/text/Text.scss
+++ b/src/elements/text/Text.scss
@@ -4,6 +4,9 @@
 	font-size: rem(15px);
 	line-height: rem(22px);
 	padding: 0;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .Text--Style-Positive {
