--- a/src/shared/styles/shared/_colors.scss
+++ b/src/shared/styles/shared/_colors.scss
@@ -97,7 +97,8 @@ $grey: (
 );
 
 $ink: (
-	base: #212b36,
+	dark: #212b36,
+	base: #37352f,
 	light: #454f5b,
 	lighter: #637381,
 	lightest: #919eab,
