--- a/src/shared/styles/shared/_helpers.scss
+++ b/src/shared/styles/shared/_helpers.scss
@@ -27,6 +27,7 @@ $border-radius-data: (
 /// @return {Number} The converted value in rem.
 
 $base-font-size: 10px;
+$default-browser-font-size: 16px;
 
 @function rem($value) {
 	$unit: unit($value);
@@ -42,6 +43,60 @@ $base-font-size: 10px;
 	} @else {
 		@error 'Value must be in px, em, or rem.';
 	}
+}
+
+/// Returns the value in ems for a given pixel value. Note that this
+/// only works for elements that have had no font-size changes.
+/// @param {Number} $value - The pixel value to be converted.
+/// @return {Number} The converted value in ems.
+
+@function em($value) {
+	$unit: unit($value);
+
+	@if $value == 0 {
+		@return 0;
+	} @else if $unit == 'em' {
+		@return $value;
+	} @else if $unit == 'rem' {
+		@return $value / 1rem * 1em * ($base-font-size / $default-browser-font-size);
+	} @else if $unit == 'px' {
+		@return $value / $default-browser-font-size * 1em;
+	} @else {
+		@error 'Value must be in px, rem, or em.';
+	}
+}
+
+/// Returns the list of available names in a given map.
+/// @param {Map} $map - The map of data to list the names from.
+/// @param {Number} $map - The level of depth to get names from.
+/// @return {String} The list of names in the map.
+
+@function available-names($map, $level: 1) {
+	@if type-of($map) != 'map' {
+		@return null;
+	}
+
+	$output: '';
+	$newline: '\A ';
+
+	@if $level == 1 {
+		@each $key, $value in $map {
+			$output: $output + '#{$newline}- #{$key} #{available-names($value, $level + 1)}';
+		}
+	} @else {
+		$output: '(';
+		$i: 1;
+
+		@each $key, $value in $map {
+			$sep: if($i < length($map), ', ', '');
+			$output: $output + '#{$key}#{$sep}#{available-names($value, $level + 1)}';
+			$i: $i + 1;
+		}
+
+		$output: $output + ')';
+	}
+
+	@return $output;
 }
 
 /// Returns the spacing value for a given variant.
