--- a/src/shared/styles/shared/_responsive.scss
+++ b/src/shared/styles/shared/_responsive.scss
@@ -1,5 +1,20 @@
 $attribute-type: ('spacing', 'padding', 'distribution', 'alignment', 'wrap');
 
+@function breakpoint($value, $adjustment: 0) {
+	$adjusted-value: em($adjustment);
+
+	// Reduces chances to have a style void
+	// between two media queries
+	// See https://github.com/sass-mq/sass-mq/issues/6
+	@if ($adjustment == -1px) {
+		$adjusted-value: -0.01em;
+	} @else if ($adjustment == 1px) {
+		$adjusted-value: 0.01em;
+	}
+
+	@return em($value) + $adjusted-value;
+}
+
 @mixin breakpoint-after($breakpoint, $inclusive: true) {
 	@media (min-width: #{breakpoint($breakpoint, if($inclusive, 0, 1px))}) {
 		@content;
