add ticketlistheader feature

--- a/src/elements/text/Text.scss
+++ b/src/elements/text/Text.scss
@@ -1,12 +1,11 @@
 @import '../../shared/styles/utilities';
 
 .Text {
-	font-size: rem(15px);
-	line-height: rem(22px);
 	padding: 0;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	font-weight: inherit;
 }
 
 .Text--Style-Positive {
