--- a/src/elements/dropdown/Dropdown.scss
+++ b/src/elements/dropdown/Dropdown.scss
@@ -2,13 +2,12 @@
 
 .Dropdown {
 	transition: all 300ms ease;
-
 	will-change: transform;
 	z-index: $zIndex-dropdown;
 	margin-top: rem(28px);
 	position: absolute;
 	top: 0;
-	background-color: transparentize(color($white), 0.09);
+	background-color: color($white);
 	border-radius: border-radius();
 	box-shadow: shadow(faint);
 	margin-left: rem(-12px);
