--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,12 @@ html {
 	position: relative;
 	font-family: sans-serif; /* 1 */
 	font-size: 62.5%;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	text-size-adjust: 100%;
+	text-rendering: optimizeLegibility;
 }
 
 /**
