--- a/src/shared/styles/base/_typography.scss
+++ b/src/shared/styles/base/_typography.scss
@@ -51,8 +51,8 @@ $type-scale-desktop: (
 	h2: 2.941rem,
 	h3: 2.211rem,
 	h4: 1.663rem,
-	p: 1.25rem,
-	small: 1rem // deviates from modular scale,,,,,,,,,,,,,,,,
+	p: 1.5rem,
+	small: 1rem // deviates from modular scale,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 
 /* 
@@ -67,7 +67,7 @@ $type-scale-tablet: (
 	h2: 2.441rem,
 	h3: 1.953em,
 	h4: 1.563rem,
-	p: 1.25rem,
+	p: 1.5rem,
 	small: 1rem,
 );
 
@@ -82,9 +82,9 @@ $type-scale-mobile: (
 	h1: 2.686rem,
 	h2: 2.148rem,
 	h3: 1.719rem,
-	h4: 1.375rem,
-	p: 1.1rem,
-	small: 0.94rem // deviates from modular scale,,,,,,,,,,,,,,,,
+	h4: 1.575rem,
+	p: 1.5rem,
+	small: 0.94rem // deviates from modular scale,,,
 );
 
 $breakpoint-tablet: 75em;
