--- a/src/shared/styles/shared/_keyframes.scss
+++ b/src/shared/styles/shared/_keyframes.scss
@@ -1,18 +1,18 @@
 @keyframes moveit {
 	0% {
-		transform: translateY(-40px) scale3d(0.98, 0.98, 1);
+		transform: translateY(-40px);
 	}
 	20% {
-		transform: translateY(5px) scale3d(1.05, 1.05, 1);
+		transform: translateY(5px);
 	}
 	40% {
-		transform: translateY(-5px) scale3d(0.99, 0.99, 1);
+		transform: translateY(-5px);
 	}
 	66% {
-		transform: translateY(2px) scale3d(1, 1, 1);
+		transform: translateY(2px);
 	}
 	100% {
-		transform: translateY(0px) scale3d(1, 1, 1);
+		transform: translateY(0px);
 	}
 }
 
@@ -21,15 +21,6 @@
 		transform: translateY(0px);
 	}
 	100% {
-		transform: translateY(-60px) scale3d(0.99, 0.99, 1);
-	}
-}
-
-@keyframes scale {
-	0% {
-		transform: scale3d(0.98, 0.98, 1);
-	}
-	100% {
-		transform: scale3d(1, 1, 1);
+		transform: translateY(-60px);
 	}
 }
